<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bp_record_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">

        <LinearLayout
            android:id="@+id/bp_user_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bp_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="5dp"
                android:paddingTop="10dp"
                android:text="@string/placeholder_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bp_user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingTop="10dp"
                android:layout_marginEnd="5dp"
                android:gravity="end"
                android:text="@string/placeholder_id"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bp_user_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:baselineAligned="false"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/bp_user_header">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/bp_user_age_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/placeholder_age"/>

                <TextView
                    android:id="@+id/bp_user_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="3dp"
                    android:text="@string/placeholder_null"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/bp_user_age_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_unit"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/bp_user_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/placeholder_weight"/>

                <TextView
                    android:id="@+id/bp_user_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="3dp"
                    android:text="@string/placeholder_null"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/bp_user_weight_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_unit"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/bp_user_height_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/placeholder_height"/>

                <TextView
                    android:id="@+id/bp_user_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="3dp"
                    android:text="@string/placeholder_null"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/bp_user_height_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_unit"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bp_user_bmi_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:weightSum="3"
            android:baselineAligned="false"
            app:layout_constraintTop_toBottomOf="@id/bp_user_data">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/bp_user_bmi_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/placeholder_bmi"/>

                <TextView
                    android:id="@+id/bp_user_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="3dp"
                    android:text="@string/placeholder_null"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bp_user_bmi_category_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:contentPadding="3dp"
                    app:contentPaddingLeft="5dp"
                    app:contentPaddingRight="5dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/bp_user_bmi_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_null"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/bp_user_bmi_data">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bp_user_edit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/btn_label_edit"
                android:drawableTint="@color/white"
                app:drawableLeftCompat="@drawable/ic_edit_black_24dp"
                app:cornerRadius="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bp_user_delete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/btn_label_delete"
                android:drawableTint="@color/white"
                app:drawableLeftCompat="@drawable/ic_delete_black_24dp"
                app:cornerRadius="15dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>