<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.camera.CameraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">

        <Button
            android:id="@+id/retake_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="95dp"
            android:background="@drawable/ic_replay_circle_black_24dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:text="@string/btn_label_retake"
            android:textColor="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/result_category"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="95dp"
            android:background="@drawable/ic_check_circle_black_24dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:text="@string/btn_label_confirm"
            android:textColor="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/result_category"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/ic_photo_library_black_24dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_label_gallery"
            android:textColor="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/result_table"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/capture_button"/>

        <Button
            android:id="@+id/capture_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_camera_black_24dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_label_capture"
            android:textColor="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/result_table"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/user_selector_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/cam_live_feed"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <Spinner
                android:id="@+id/user_selector"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="10dp"/>

        </androidx.cardview.widget.CardView>

        <TableLayout
            android:id="@+id/result_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:stretchColumns="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_selector_card">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/bp_sys"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/sys_value"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/placeholder_null"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="125dp"
                    android:gravity="end"
                    android:text="@string/bp_unit"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/bp_dia"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/dia_value"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/placeholder_null"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="125dp"
                    android:gravity="end"
                    android:text="@string/bp_unit"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/bp_pul"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/pul_value"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/placeholder_null"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="125dp"
                    android:gravity="end"
                    android:text="@string/bp_pul_unit"
                    android:textSize="20sp"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/result_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/result_table"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/result_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/label_category"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/result_category_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:contentPadding="5dp"
                app:contentPaddingLeft="7dp"
                app:contentPaddingRight="7dp"
                app:cardCornerRadius="7dp"
                app:cardBackgroundColor="@color/gray"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/result_category_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text=""/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.camera.view.PreviewView
            android:id="@+id/cam_live_feed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/captured_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:importantForAccessibility="no"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/loading_widget"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="true"
            android:translationZ="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:padding="140dp"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.example.m_health.ui.camera.BoundingBoxOverlay
            android:id="@+id/bounding_box_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:translationZ="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/inference_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text=""
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>